Fixed some typos

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -167,7 +167,7 @@
  ['40.34673', '-74.655259', 'Frist Campus Center - 100 Level', '30'],
  ['40.34673', '-74.655259', 'Frist Campus Center - B Level', '30']];
 
- hotspotLocs = hot = [['40.35063', '-74.654932', '1st Floor (near elevator)'],
+ hotspotLocs = [['40.35063', '-74.654932', '1st Floor (near elevator)'],
  ['40.342738', '-74.657116', 'Communication Center window'],
  ['40.348357', '-74.648976', 'Next to elevator, main lobby'],
  ['40.349043', '-74.6586', 'Chancellor Green Cafe'],
@@ -205,7 +205,7 @@
  ['40.34745173', '-74.66012844', 'Exterior, near Entry 4'],
  ['40.34570028', '-74.65758615', 'North wall, exterior']];
 
- laundryLoscs = laund = [['40.344719', '-74.65694', '1915 Hall - Entry 6'],
+ laundryLoscs = [['40.344719', '-74.65694', '1915 Hall - Entry 6'],
  ['40.345162', '-74.655828', '1927/Clapp Hall - Basement'],
  ['40.344532', '-74.655534', '1976 Hall - Room 032'],
  ['40.34365', '-74.657332', '1981 Hall - Room F312'],
