Fixed some more  typos

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -205,7 +205,7 @@
  ['40.34745173', '-74.66012844', 'Exterior, near Entry 4'],
  ['40.34570028', '-74.65758615', 'North wall, exterior']];
 
- laundryLoscs = [['40.344719', '-74.65694', '1915 Hall - Entry 6'],
+ laundryLocs = [['40.344719', '-74.65694', '1915 Hall - Entry 6'],
  ['40.345162', '-74.655828', '1927/Clapp Hall - Basement'],
  ['40.344532', '-74.655534', '1976 Hall - Room 032'],
  ['40.34365', '-74.657332', '1981 Hall - Room F312'],
