--- a/classes/templates/classes/layout.html
+++ b/classes/templates/classes/layout.html
@@ -23,7 +23,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="../static/classes/images/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <title>ClassMaps | Princeton University</title>
+    <title>ClassMaps</title>
 </head>
 <body>
     <header class="container center-align">
