--- a/classes/templates/classes/searches.html
+++ b/classes/templates/classes/searches.html
@@ -14,7 +14,7 @@
         {% endfor %}
     {% endif %}
     {% if not classes and not buildings %}
-        <img src="http://www.cs.princeton.edu/~yangsong/calvinandhobbes.png" alt="NotFound" class="center" style="width:100%;height:25%;">
+        <img src="../../static/classes/images/calvinandhobbes.png" alt="NotFound" class="center" style="width:100%;height:25%;">
     {% endif %}
 </ul>
 <a href="/classes" class="btn">Go back</a>
