--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -234,7 +234,7 @@
  ['40.344255', '-74.656129', 'Yoseloff Hall - Room 005']];
 
      var printerIcon = L.icon({
-       iconUrl: 'http://www.cs.princeton.edu/~yangsong/printer_icon.png',
+       iconUrl: '../static/classes/images/printer.png',
 
        iconSize:     [28, 28], // size of the icon
        iconAnchor:   [14, 14], // point of the icon which will correspond to marker's location
@@ -242,7 +242,7 @@
      });
 
      var laundryIcon = L.icon({
-       iconUrl: 'http://www.cs.princeton.edu/~yangsong/washer.png',
+       iconUrl: '../static/classes/images/washing-machine.png',
 
        iconSize:     [28, 28], // size of the icon
        iconAnchor:   [14, 14], // point of the icon which will correspond to marker's location
@@ -250,10 +250,10 @@
      });
 
 var hotspotIcon = L.icon({
-       iconUrl: 'http://www.cs.princeton.edu/~yangsong/hotspot.png',
+       iconUrl: '../static/classes/images/hotspot.png',
 
-       iconSize:     [28, 28], // size of the icon
-       iconAnchor:   [14, 14], // point of the icon which will correspond to marker's location
+       iconSize:     [26, 26], // size of the icon
+       iconAnchor:   [13, 13], // point of the icon which will correspond to marker's location
        popupAnchor:  [0, 0] // point from which the popup should open relative to the iconAnchor
      });
 
