--- a/classes/templates/classes/details.html
+++ b/classes/templates/classes/details.html
@@ -12,7 +12,7 @@
     <h6 class="center-align">{{classe}}</h6>
     <div class="card">
         <div class="card-content">
-            {{classe.building}} {{classe.room}} {{classe.day}} {{classe.time}}
+            {{classe.building}} {{classe.room}} {{classe.day}}
         </div>
     </div>
 {% endif %}
