--- a/classes/templates/classes/layout.html
+++ b/classes/templates/classes/layout.html
@@ -27,13 +27,14 @@
 </head>
 <body>
     <header class="container center-align">
-        <h2><b><font face="helvetica">ClassMaps</font></b></h2>
+<!--         <h2><b><font face="helvetica">ClassMaps</font></b></h2> -->
+        <img src="../../static/classes/images/widebanner.png" alt="ClassMaps" class="center" style="width:100%;height:25%;">
     </header>
     <div class="container">
         {% block content %}
         {% endblock %}
         <br>
-        <a style="display:block" class="center-align" href="/admin">Admin Login</a>
+<!--         <a style="display:block" class="center-align" href="/admin">Admin Login</a> -->
     </div>
 </body>
 </html>
