--- a/classes/templates/classes/layout.html
+++ b/classes/templates/classes/layout.html
@@ -25,7 +25,7 @@
     <meta name="theme-color" content="#ffffff">
     <title>ClassMaps</title>
 </head>
-<body>
+<body bgcolor="#000000">
     <header class="container center-align">
 <!--         <h2><b><font face="helvetica">ClassMaps</font></b></h2> -->
         <img src="../../static/classes/images/widebanner.png" alt="ClassMaps" class="center" style="width:100%;height:25%;">
