--- a/classes/templates/classes/layout.html
+++ b/classes/templates/classes/layout.html
@@ -30,7 +30,7 @@
 <!--         <h2><b><font face="helvetica">ClassMaps</font></b></h2> -->
         <img src="../../static/classes/images/widebanner.png" alt="ClassMaps" class="center" style="width:100%;height:25%;">
     </header>
-    <div class="container">
+    <div class="container" bgcolor="#000000">
         {% block content %}
         {% endblock %}
         <br>
