--- a/classes/templates/classes/layout.html
+++ b/classes/templates/classes/layout.html
@@ -26,7 +26,7 @@
     <title>ClassMaps</title>
 </head>
 <body bgcolor="#000000">
-    <header class="container center-align">
+    <header class="container center-align" bgcolor="#000000">
 <!--         <h2><b><font face="helvetica">ClassMaps</font></b></h2> -->
         <img src="../../static/classes/images/widebanner.png" alt="ClassMaps" class="center" style="width:100%;height:25%;">
     </header>
