--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -47,7 +47,7 @@
 
 
 <html>
-<head>
+<head bgcolor="#000000">
   <title>ClassMaps</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -69,7 +69,7 @@
     });
     var input = $('#single-input').clockpicker({
       placement: 'bottom',
-      align: 'left',
+      align: 'right',
       autoclose: true,
       default: 'now'
     });
