--- a/classes/templates/classes/layout.html
+++ b/classes/templates/classes/layout.html
@@ -29,12 +29,13 @@
     <header class="container center-align" bgcolor="#000000">
 <!--         <h2><b><font face="helvetica">ClassMaps</font></b></h2> -->
         <img src="../../static/classes/images/widebanner.png" alt="ClassMaps" class="center" style="width:100%">
-    </header>
-    <div class="container" bgcolor="#000000">
         {% block content %}
         {% endblock %}
+    </header>
+<!--     <div class="container" bgcolor="#000000">
+        was here before block
         <br>
-<!--         <a style="display:block" class="center-align" href="/admin">Admin Login</a> -->
-    </div>
+       <a style="display:block" class="center-align" href="/admin">Admin Login</a>
+    </div> -->
 </body>
 </html>
