Add ability to save markers

--- a/classes/templates/classes/searches.html
+++ b/classes/templates/classes/searches.html
@@ -5,7 +5,7 @@
 <ul class ="collection">
     {% if buildings %}
         {% for b in buildings %}
-        <li class="collection-item"><a href="/classes/{{b}}">{{b}}</a></li>
+        <li class="collection-item"><a href="/buildings/{{b}}">{{b}}</a></li>
         {% endfor %}
     {% endif %}
     {% if classes %}
