--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -51,9 +51,6 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
 
-  <script src="{% static 'classes/bkmkdist/Leaflet.Bookmarks.min.js' %}"></script>
-  <link type="text/css" rel="stylesheet" href="{% static 'classes/bkmkdist/leaflet.bookmarks.css' %}">
-
   <script type="text/javascript" src="{% static 'classes/assets/js/jquery.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'classes/assets/js/bootstrap.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'classes/dist/bootstrap-clockpicker.min.js' %}"></script>
@@ -235,24 +232,60 @@
         .openOn(map);
     }
     map.on('click', onMapClick);
-  </script>
-  <script>
+
     {% if building %}
-        var c = "{{building.building}}";
-        var d = "";
-        var loc2 = "{{building.building_lon}}";
-        var loc1 = "{{building.building_lat}}";
+        var loc2 = "{{building.lon}}";
+        var loc1 = "{{building.lat}}";
+        var id = "{{building.pk}}";
+        var type = "b";
+        var name = "{{building}}";
     {% elif c %}
-        var c = "{{c.building}}";
-        var d = "{{c.room}}";
         var loc2 = "{{c.building_lon}}";
         var loc1 = "{{c.building_lat}}";
+        var id = "{{c.pk}}";
+        var type = "c";
+        var name = "{{c}}";
     {% endif %}
-    map.fire('bookmark:new', {
-      latlng: new L.LatLng(loc1, loc2)
-    });
-     L.marker([loc1, loc2]).addTo(map)
-    .bindPopup(c + " " + d).openPopup();
+
+    {% if building or c %}
+      var search = "<div>" + name + "</div>" +
+      "<form method=\"GET\" action=\"{% url 'classes:index' %}\">" +
+          "<button class=\"btn btn-success\" name=\"s\" value=\""+id+type+"\" type=\"submit\">" +
+              "Save" +
+          "</button>" +
+      "</form>";
+       L.marker([loc1, loc2]).addTo(map).bindPopup(search).openPopup();
+    {% endif %}
+
+    // Saved stuff
+    {% if saved_courses %}
+       {% for s in saved_courses %}
+         var saved =
+         "<form method=\"GET\" action=\"{% url 'classes:index' %}\">" +
+             "<button class=\"btn btn-success\" name=\"r\" value=\"{{s.pk}}c\" type=\"submit\">" +
+                 "Remove" +
+             "</button>" +
+         "</form>";
+         var name = "{{s}}";
+         var loc2 = "{{s.building_lon}}";
+         var loc1 = "{{s.building_lat}}";
+           L.marker([loc1, loc2]).addTo(map).bindPopup("<div>"+name+"</div>"+saved).openPopup();
+        {% endfor %}
+    {% endif %}
+    {% if saved_buildings %}
+       {% for s in saved_buildings %}
+         var saved =
+         "<form method=\"GET\" action=\"{% url 'classes:index' %}\">" +
+             "<button class=\"btn btn-success\" name=\"r\" value=\"{{s.pk}}b\" type=\"submit\">" +
+                 "Remove" +
+             "</button>" +
+         "</form>";
+         var name = "{{s}}";
+         var loc2 = "{{s.lon}}";
+         var loc1 = "{{s.lat}}";
+           L.marker([loc1, loc2]).addTo(map).bindPopup("<div>"+name+"</div>"+saved).openPopup();
+        {% endfor %}
+    {% endif %}
   </script>
 
 </body>
