--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -37,7 +37,7 @@
 
 
 <div style="width:30%; float:right;">
-  <div class="input-group clockpicker pull-center"  data-autoclose="true">
+  <div class="input-group clockpicker pull-center" data-placement="left" data-align="top" data-autoclose="true">
     <input type="text" class="form-control">
     <span class="input-group-addon">
       <span class="glyphicon glyphicon-time"></span>
