--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -103,7 +103,7 @@
 
     //var geojsonLayer = new L.GeoJSON.AJAX("scraping/shapes.json");
 
-    var district_boundary = new L.geoJson();
+   /* var district_boundary = new L.geoJson();
 district_boundary.addTo(map);
 
 $.ajax({
@@ -114,7 +114,7 @@ success: function(data) {
         district_boundary.addData(data);
     });
 }
-}).error(function() {});
+}).error(function() {});*/
 
     var printerLocs = [['40.34614', '-74.660091', '1901 Hall - Ground Floor', '6'],
  ['40.345863', '-74.656253', '1937 Hall - Ground Floor', '6'],
