--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -82,7 +82,7 @@
 </style>
 </head>
 
-<div class="dropdown">
+<!-- <div class="dropdown">
   <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     Day of the Week
   </button>
@@ -92,7 +92,7 @@
     <a class="dropdown-item" href="#W">Wednesday</a>
     <a class="dropdown-item" href="#Th">Thursday</a>
     <a class="dropdown-item" href="#F">Friday</a>
-  </div>
+  </div> -->
 </div>
   <div id="map"></div>
   <script>
