--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -23,15 +23,37 @@
 <link rel="stylesheet" type="text/css" href="{% static 'classes/dist/bootstrap-clockpicker.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/github.min.css' %}">
 <body bgcolor="#000000">
-<form method="GET" action="{% url 'classes:search' %}">
-    <input name = "q" value="{{request.GET.q}}" placeholder="Search dept/course num... ex: COS 333">
-<!--     <label class="switch">
-      <p>Monday</p>
+<form method="GET" action="{% url 'posts:search' %}">
+    <input name = "q" value="{{request.GET.q}}" placeholder="search..">
+    <div>
+    <label class="switch">
+      Monday
       <input name = "q2" value = "M" type="checkbox">
       <span class="slider"></span>
-     </label> -->
+    </label>
+    <label class="switch">
+      Tuesday
+      <input name = "q3" value = "T" type="checkbox">
+      <span class="slider"></span>
+    </label>
+    <label class="switch">
+      Wednesday
+      <input name = "q4" value = "W" type="checkbox">
+      <span class="slider"></span>
+    </label>
+    <label class="switch">
+      Thursday
+      <input name = "q5" value = "Th" type="checkbox">
+      <span class="slider"></span>
+    </label>
+    <label class="switch">
+      Friday
+      <input name = "q6" value = "F" type="checkbox">
+      <span class="slider"></span>
+    </label>
+      </div>
     <button class="btn btn-success" type="submit">
-        Search
+       Search
     </button>
 </form>
 
