--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -1,9 +1,8 @@
 {% extends 'classes/layout.html' %}
-
 {% load static %}
 
 {% block content %}
-
+<link rel="stylesheet" type="text/css" href="{% static 'classes/style.css' %}" />
 {% if building %}
 <div class="card">
     <div class="card-content">
