--- a/classes/templates/classes/searches.html
+++ b/classes/templates/classes/searches.html
@@ -17,5 +17,5 @@
         <img src="../../static/classes/images/calvinandhobbes.png" alt="NotFound" class="center" style="width:100%;height:25%;">
     {% endif %}
 </ul>
-<a href="/classes" class="btn">Go back</a>
+<a href="/course" class="btn">Go back</a>
 {% endblock %}
