--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -52,6 +52,7 @@
       <input name = "q6" value = "F" type="checkbox">
       <span class="slider"></span>
     </label>
+    <input id="time" type="time" name="t">
       </div>
     <button class="btn btn-success" type="submit">
        Search
