--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -55,7 +55,7 @@
       </div>
     <div style="width:30%; float:right;">
       <div class="input-group clockpicker pull-center" data-placement="left" data-align="top" data-autoclose="true">
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" name="t">
         <span class="input-group-addon">
           <span class="glyphicon glyphicon-time"></span>
         </span>
