--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -26,6 +26,7 @@
     <div style="width:40%; float:left;">
     <input name = "q" value="{{request.GET.q}}" placeholder="search..">
     </div>
+    <div style="border-left:1px solid #000;height:20px"></div>
     <div div style="width:30%; float:right;">
     <label class="switch">
       Monday
@@ -53,6 +54,7 @@
       <span class="slider"></span>
     </label>
       </div>
+    <div style="border-left:1px solid #000;height:20px"></div>
     <div style="width:30%; float:right;">
       <div class="input-group clockpicker pull-center" data-placement="left" data-align="top" data-autoclose="true">
         <input type="text" class="form-control" name="t">
