--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -13,7 +13,7 @@
     <h6 class="center-align">{{c}}</h6>
     <div class="card">
         <div class="card-content">
-            {{c.building}} {{c.room}} {{c.day}} {{c.time}}
+            {{c.building}} {{c.room}} {{c.day}} {{c.starttime}}-{{c.endtime}}
         </div>
     </div>
 {% endif %}
