--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -23,10 +23,10 @@
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/github.min.css' %}">
 <body bgcolor="#000000">
 <form method="GET" action="{% url 'classes:search' %}">
+    <img src="{% static 'classes/images/toolbar.png'%}" alt="ClassMaps" style="width:10%">
     <div style="width:40%; float:left;">
     <input name = "q" value="{{request.GET.q}}" placeholder="search..">
     </div>
-    <div style="border-left:1px solid #000;height:20px"></div>
     <div div style="width:30%; float:right;">
     <label class="switch">
       Monday
@@ -54,7 +54,6 @@
       <span class="slider"></span>
     </label>
       </div>
-    <div style="border-left:1px solid #000;height:20px"></div>
     <div style="width:30%; float:right;">
       <div class="input-group clockpicker pull-center" data-placement="left" data-align="top" data-autoclose="true">
         <input type="text" class="form-control" name="t">
