--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -99,7 +99,7 @@
 
 
 <style>
-  #map { width: 100%; height: 90%; }
+  #map { width: 100%; height: auto; }
   .slidecontainer {
       margin: 0 auto;
       width: 350px;
