--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/github.min.css' %}">
 <body bgcolor="#000000">
 <form method="GET" action="{% url 'classes:search' %}">
-    <img src="{% static 'classes/images/toolbar.png'%}" alt="ClassMaps" style="width:5%; float:left;">
+    <img src="{% static 'classes/images/toolbar.png'%}" alt="ClassMaps" style="width:5%; float:left;" hspace="15">
     <div style="width:30%; float:left;">
     <input name = "q" value="{{request.GET.q}}" placeholder="search..">
     </div>
