--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'classes/dist/bootstrap-clockpicker.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/github.min.css' %}">
 <body bgcolor="#000000">
+<div>
 <form method="GET" action="{% url 'classes:search' %}">
     <img src="{% static 'classes/images/toolbar.png'%}" alt="ClassMaps" style="width:5%; float:left;" hspace="15" vspace="10">
     <div style="width:30%; float:left;">
@@ -52,7 +53,7 @@
       </div>
     </div>
 </form>
-
+</div>
 {% if building %}
 <div class="card">
     <div class="card-content">
