--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -11,7 +11,7 @@
 
 <form method="GET" action="{% url 'classes:search' %}">
     <img src="{% static 'classes/images/toolbar.png'%}" alt="ClassMaps" style="width:5%; float:left;" hspace="15" vspace="10">
-    <div div style="width:25%; float:right;">
+    <div div style="width:30%; float:left;">
     <label class="switch">
       Monday
       <input name = "q2" value = "M" type="checkbox">
@@ -38,7 +38,7 @@
       <span class="slider"></span>
     </label>
       </div>
-    <div style="width:10%; float:right;">
+    <div style="width:10%; float:left;">
       <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="true">
         <input type="text" class="form-control" name="t">
         <span class="input-group-addon">
