--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -11,6 +11,12 @@
 
 <form method="GET" action="{% url 'classes:search' %}">
     <img src="{% static 'classes/images/toolbar.png'%}" alt="ClassMaps" style="width:5%; float:left;" hspace="15" vspace="10">
+     <div style="width:30%; float:left;">
+        <input name = "q" value="{{request.GET.q}}" placeholder="search..">
+        <button class="btn btn-success" type="submit">
+            Search ClassMaps!
+        </button>
+    </div>
     <div div style="width:30%; float:left;">
     <label class="switch">
       Monday
@@ -45,14 +51,6 @@
           <span class="glyphicon glyphicon-time"></span>
         </span>
       </div>
-    </div>
-    <div style="width:30%; float:left;">
-        <span>
-        <input name = "q" value="{{request.GET.q}}" placeholder="search..">
-        <button class="btn btn-success" type="submit">
-            Search ClassMaps!
-        </button>
-        </span>
     </div>
 </form>
 
@@ -407,7 +405,7 @@ mymap.locate({setView: true, maxZoom: 15});
         var id = "{{c.pk}}";
         var type = "c";
 //      modified this line to add parameters
-        var name = "{{c}}"+"\n"+"{{c.building}} {{c.room}}"+"\n"+"{{c.day}} {{c.starttime}}-{{c.endtime}}";
+        var name = "{{c}} {{c.building}} {{c.room}} {{c.day}} {{c.starttime}}-{{c.endtime}}";
     {% endif %}
    
     {% if building or c %}
@@ -424,7 +422,7 @@ mymap.locate({setView: true, maxZoom: 15});
     {% if saved_courses %}
        {% for s in saved_courses %}
          var saved =
-         "<form method=\"GET\" action=\"{% url 'classes:index' %}\">" +
+         "<form method=\"GET\" action=\"{% url 'classes:index' %}\">" + "\n" +
              "<button class=\"btn btn-success\" name=\"r\" value=\"{{s.pk}}c\" type=\"submit\">" +
                  "Remove" +
              "</button>" +
