--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -12,9 +12,9 @@
 <form method="GET" action="{% url 'classes:search' %}">
     <img src="{% static 'classes/images/toolbar.png'%}" alt="ClassMaps" style="width:5%; float:left;" hspace="15" vspace="10">
      <div style="width:30%; float:left;">
-        <input name = "q" value="{{request.GET.q}}" placeholder="search..">
+        <input name = "q" value="{{request.GET.q}}" placeholder="Enter a course or building...">
         <button class="btn btn-success" type="submit">
-            Search ClassMaps!
+            Search ClassMaps
         </button>
     </div>
     <div div style="width:30%; float:left;">
@@ -46,7 +46,7 @@
       </div>
     <div style="width:10%; float:left;">
       <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="true">
-        <input type="text" class="form-control" name="t">
+        <input type="text" class="form-control" name="t" placeholder="Set Time">
         <span class="input-group-addon">
           <span class="glyphicon glyphicon-time"></span>
         </span>
