--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -299,6 +299,8 @@ var hotspotIcon = L.icon({
      
      var savedIcon = L.icon({
        iconUrl: "{% static 'classes/images/marker-icon-orange.png' %}"
+       iconAnchor:   [7, 30], // point of the icon which will correspond to marker's location
+       popupAnchor:  [7, 0] // point from which the popup should open relative to the iconAnchor
      });
 
     for (var i = 0; i < printerLocs.length; i++) {
