--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -300,7 +300,7 @@ success: function(data) {
      var savedIcon = L.icon({
        iconUrl: "{% static 'classes/images/marker-icon-orange.png' %}",
        iconAnchor:   [12, 41], // point of the icon which will correspond to marker's location
-       popupAnchor:  [2, -38] // point from which the popup should open relative to the iconAnchor
+       popupAnchor:  [-12, -41] // point from which the popup should open relative to the iconAnchor
      });
 
     for (var i = 0; i < printerLocs.length; i++) {
@@ -429,7 +429,7 @@ mymap.locate({setView: true, maxZoom: 15});
     {% if saved_courses %}
        {% for s in saved_courses %}
          var saved =
-         "<form method=\"GET\" action=\"{% url 'classes:index' %}\">" + "\n" +
+         "<form method=\"GET\" action=\"{% url 'classes:index' %}\">" +"<br>"+
              "<button class=\"btn btn-remove\" name=\"r\" value=\"{{s.pk}}c\" type=\"submit\">" +
                  "Remove" +
              "</button>" +
@@ -443,7 +443,7 @@ mymap.locate({setView: true, maxZoom: 15});
     {% if saved_buildings %}
        {% for s in saved_buildings %}
          var saved =
-         "<form method=\"GET\" action=\"{% url 'classes:index' %}\">" +
+         "<form method=\"GET\" action=\"{% url 'classes:index' %}\">" +"<br>"+
              "<button class=\"btn btn-remove\" name=\"r\" value=\"{{s.pk}}b\" type=\"submit\">" +
                  "Remove" +
              "</button>" +
