--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -100,7 +100,7 @@ removed the cards
 
 
 <style>
-  #map { width: 100%; height: 675px; }
+  #map { width: 100%; }
   .slidecontainer {
       margin: 0 auto;
       width: 350px;
