--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -100,7 +100,10 @@ removed the cards
 
 
 <style>
-  #map { width: 100%; height: 700px;}
+  html, body {
+   height: 100%;
+  }
+  #map { width: 100%; height: 90%;}
   .slidecontainer {
       margin: 0 auto;
       width: 350px;
