--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -355,7 +355,7 @@ mymap.locate({setView: true, maxZoom: 15});
     map.locate({setView: true,watch: true, maxZoom: 16});
     function onLocationFound(e) {
     var radius = e.accuracy / 2;
-    L.marker(e.latlng, {icon: savedIcon}).addTo(map)
+    L.marker(e.latlng, {icon: myIcon}).addTo(map)
         .bindPopup("You are within " + radius + " meters from this point").openPopup();
     L.circle(e.latlng, radius).addTo(map);
     }
