--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -2,13 +2,13 @@
 {% load static %}
 
 {% block content %}
+<html>
 <link rel="stylesheet" type="text/css" href="{% static 'classes/style.css' %}" />
-
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/bootstrap.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'classes/dist/bootstrap-clockpicker.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/github.min.css' %}">
 <body bgcolor="#000000">
-
+<div id="topbar">
 <form method="GET" action="{% url 'classes:search' %}">
     <img src="{% static 'classes/images/toolbar.png'%}" alt="ClassMaps" style="width:5%; float:left;" hspace="15" vspace="10">
      <div style="width:30%; float:left;">
@@ -53,7 +53,7 @@
       </div>
     </div>
 </form>
-
+    </div>
 <!-- {% if building %}
 removed the cards
 <div class="card">
@@ -70,7 +70,6 @@ removed the cards
     </div>
 {% endif %} -->
 
-<html>
 <head bgcolor="#000000">
   <title>ClassMaps</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -103,7 +102,10 @@ removed the cards
   html, body {
    height: 100%;
   }
-  #map { width: 100%; height: 92%;}
+    topbar{
+    height: 10%
+    }
+  #map { width: 100%; height: 90%;}
   .slidecontainer {
       margin: 0 auto;
       width: 350px;
