--- a/classes/templates/classes/searches.html
+++ b/classes/templates/classes/searches.html
@@ -9,7 +9,7 @@
             margin-left: 20%;
     }
 </style>
-<div id="resultList">
+<div id="resultList" style="margin:10%;padding:5%">
 <ul class ="collection">
     {% if buildings %}
         {% for b in buildings %}
